--- a/public/game.html
+++ b/public/game.html
@@ -44,7 +44,7 @@
                     <span ng-if="game.finished == 0 || game.finished == 1">in</span>
                     <strong>{{game.getPlaytimeDisplay()}}</strong>
                 </span><br>
-                <game-rating game="game" ng-if="game.hasRating()"></game-rating>
+                <rating ng-model="game.rating" max="5" readonly="true" ng-if="game.hasRating()"></rating>
                 <br>
                 <strong ng-if="game.tag_ids.length > 0" ng-repeat="id in game.tag_ids" title="{{tag.name != tag.short_name ? tag.name : ''}}">
                     {{(tag = getTag(id)).short_name}}<span ng-if="!$last">, </span>
