--- a/public/queue.html
+++ b/public/queue.html
@@ -4,31 +4,33 @@
         Manage Queue
     </h4>
 </div>
-<div class="modal-body">
-    <div class="container-fluid">
-        <div class="row" ng-if="games.length == 0">
-            <div class="col-md-12">
-                The queue is empty
-            </div>
-        </div>
-        <div class="row" ng-repeat="game in games | orderBy:'queue_position'">
-            <div class="col-md-12">
-                <div class="form-group btn-group btn-group-xs pull-right">
-                    <button class="btn btn-default" type="button" ng-click="moveUpClick(game)" ng-class="{'disabled': game.queue_position == 0}">
-                        <span class="glyphicon glyphicon-arrow-up"></span>
-                    </button>
-                    <button class="btn btn-default" type="button" ng-click="moveDownClick(game)" ng-class="{'disabled': game.queue_position == games.length - 1}">
-                        <span class="glyphicon glyphicon-arrow-down"></span>
-                    </button>
+<form>
+    <div class="modal-body">
+        <div class="container-fluid">
+            <div class="row" ng-if="games.length == 0">
+                <div class="col-md-12">
+                    The queue is empty
                 </div>
-                <div class="overflow-ellipsis" title="{{game.title}}">
-                    {{$index+1}}. {{game.title}}
+            </div>
+            <div class="row" ng-repeat="game in games | orderBy:'queue_position'">
+                <div class="col-md-12">
+                    <div class="form-group btn-group btn-group-xs pull-right">
+                        <button class="btn btn-default" type="button" ng-click="moveUpClick(game)" ng-class="{'disabled': game.queue_position == 0}">
+                            <span class="glyphicon glyphicon-arrow-up"></span>
+                        </button>
+                        <button class="btn btn-default" type="button" ng-click="moveDownClick(game)" ng-class="{'disabled': game.queue_position == games.length - 1}">
+                            <span class="glyphicon glyphicon-arrow-down"></span>
+                        </button>
+                    </div>
+                    <div class="overflow-ellipsis" title="{{game.title}}">
+                        {{$index+1}}. {{game.title}}
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<div class="modal-footer">
-    <button type="button" class="btn btn-primary" ng-click="saveClick()">OK</button>
-    <button type="button" class="btn btn-default" ng-click="cancelClick()">Cancel</button>
-</div>
+    <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" ng-click="saveClick()">OK</button>
+        <button type="button" class="btn btn-default" ng-click="cancelClick()">Cancel</button>
+    </div>
+</form>
