--- a/public/form.html
+++ b/public/form.html
@@ -24,7 +24,7 @@
                         <input type="text" class="form-control" placeholder="Publisher" ng-model="model.publisher" name="publisher">
                     </div>
                     <div class="form-group" ng-class="{'has-error': form.year.$invalid}">
-                        <input type="number" class="form-control" placeholder="Year" ng-model="model.year" name="year" validate-year>
+                        <input type="number" class="form-control" placeholder="Release year" ng-model="model.year" name="year" validate-year>
                     </div>
                     <div class="form-group" ng-class="{'has-error': form.playtime.$invalid}">
                         <input type="text" class="form-control" placeholder="Playtime" ng-model="model.playtime" name="playtime" validate-timespan>
