--- a/public/manage.html
+++ b/public/manage.html
@@ -17,7 +17,7 @@
                     <label>Short name</label>
                 </div>
             </div>
-            <div class="row" ng-repeat="item in items | filter:{deleted: false} | orderBy:'name'">
+            <div class="row" ng-repeat="item in items | filter:{deleted: false}">
                 <div class="col-md-6">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Name" ng-model="item.name" ng-change="nameChange(item)">
