--- a/public/game.html
+++ b/public/game.html
@@ -20,39 +20,38 @@
             </p>
         </div>
         <div class="media-body game-info">
-            <p class="overflow-ellipsis">
+            <div class="overflow-ellipsis">
                 <span ng-if="game.developer">by <strong title="{{game.developer}}">{{game.developer}}</strong></span><br>
                 <span ng-if="game.publisher && game.publisher != game.developer">
                     <span ng-if="game.developer">and</span>
                     <span ng-if="!game.developer">by</span>
                     <strong title="{{game.publisher}}">{{game.publisher}}</strong>
                 </span><br>
-
-                <span ng-if="game.platform_ids.length > 0">
-                    for
-                    <strong ng-repeat="id in game.platform_ids" title="{{platform.name != platform.short_name ? platform.name : ''}}">
-                        {{(platform = getPlatform(id)).short_name}}<span ng-if="!$last">, </span>
-                    </strong>
-                </span>
-                <span ng-if="game.year">in <strong>{{game.year}}</strong></span><br>
-                <strong ng-if="game.genre_ids.length > 0" ng-repeat="id in game.genre_ids" title="{{genre.name != genre.short_name ? genre.name : ''}}">
-                    {{(genre = getGenre(id)).short_name}}<span ng-if="!$last">, </span>
-                </strong><br><br>
-                <strong ng-if="game.finished == 0">Not completed</strong>
-                <strong ng-if="game.finished == 1">Completed</strong>
-                <span ng-if="game.hasPlaytime()">
-                    <span ng-if="game.finished == 0 || game.finished == 1">in</span>
-                    <strong>{{game.getPlaytimeDisplay()}}</strong>
-                </span><br>
-                <rating ng-model="game.rating" max="5" readonly="true" ng-if="game.hasRating()"></rating>
-                <br>
-                <strong ng-if="game.tag_ids.length > 0" ng-repeat="id in game.tag_ids" title="{{tag.name != tag.short_name ? tag.name : ''}}">
-                    {{(tag = getTag(id)).short_name}}<span ng-if="!$last">, </span>
-                </strong>
-            </p>
-            <div class="gamecomment" ng-if="game.comment.length > 0">
-                {{game.comment}}
             </div>
+            <span ng-if="game.platform_ids.length > 0">
+                for
+                <strong ng-repeat="id in game.platform_ids" title="{{platform.name != platform.short_name ? platform.name : ''}}">
+                    {{(platform = getPlatform(id)).short_name}}<span ng-if="!$last">, </span>
+                </strong>
+            </span>
+            <span ng-if="game.year">in <strong>{{game.year}}</strong></span><br>
+            <strong ng-if="game.genre_ids.length > 0" ng-repeat="id in game.genre_ids" title="{{genre.name != genre.short_name ? genre.name : ''}}">
+                {{(genre = getGenre(id)).short_name}}<span ng-if="!$last">, </span>
+            </strong><br><br>
+            <strong ng-if="game.finished == 0">Not completed</strong>
+            <strong ng-if="game.finished == 1">Completed</strong>
+            <span ng-if="game.hasPlaytime()">
+                <span ng-if="game.finished == 0 || game.finished == 1">in</span>
+                <strong>{{game.getPlaytimeDisplay()}}</strong>
+            </span><br>
+            <rating ng-model="game.rating" max="5" readonly="true" ng-if="game.hasRating()"></rating>
+            <br>
+            <strong ng-if="game.tag_ids.length > 0" ng-repeat="id in game.tag_ids" title="{{tag.name != tag.short_name ? tag.name : ''}}">
+                {{(tag = getTag(id)).short_name}}<span ng-if="!$last">, </span>
+            </strong>
+            <p ng-if="game.comment">
+                {{game.comment}}
+            </p>
         </div>
     </div>
 </div>
