--- a/public/list-view.html
+++ b/public/list-view.html
@@ -4,10 +4,11 @@
             <h3 class="text-center">No results</h3>
         </div>
         <div ng-show="currentlyPlaying.length > 0">
-            <div class="page-header">
-                <h1 class="text-center">Currently Playing</h1>
-            </div>
-            <div class="list-group">
+            <h1 class="text-center">
+                <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{currentlyPlayingCollapsed ? 'right' : 'down'}}" ng-click="currentlyPlayingCollapsed = !currentlyPlayingCollapsed"></span>
+                Currently Playing
+            </h1>
+            <div class="list-group" collapse="currentlyPlayingCollapsed">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in currentlyPlaying = (ctrl.gameService.games | search:ctrl.query | filter:{currently_playing: true} | orderBy:'sort_as')"
                    ng-click="ctrl.gameSelected(game)"
@@ -17,10 +18,11 @@
             </div>
         </div>
         <div ng-show="queue.length > 0">
-            <div class="page-header">
-                <h1 class="text-center">Queue</h1>
-            </div>
-            <div class="list-group">
+            <h1 class="text-center">
+                <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{queueCollapsed ? 'right' : 'down'}}" ng-click="queueCollapsed = !queueCollapsed"></span>
+                Queue
+            </h1>
+            <div class="list-group" collapse="queueCollapsed">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in queue = (ctrl.gameService.games | search:ctrl.query | filter:{queue_position: '!!'} | orderBy:['queue_position', 'sort_as'])"
                    ng-click="ctrl.gameSelected(game)"
@@ -30,10 +32,11 @@
             </div>
         </div>
         <div ng-show="filtered.length > 0">
-            <div class="page-header">
-                <h1 class="text-center">All Games</h1>
-            </div>
-            <div class="list-group">
+            <h1 class="text-center">
+                <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{allGamesCollapsed ? 'right' : 'down'}}" ng-click="allGamesCollapsed = !allGamesCollapsed"></span>
+                All Games
+            </h1>
+            <div class="list-group" collapse="allGamesCollapsed">
                 <a class="list-group-item hand overflow-ellipsis"
                    ng-repeat="game in filtered = (ctrl.gameService.games | search:ctrl.query | orderBy:'sort_as')"
                    ng-click="ctrl.gameSelected(game)"
@@ -59,30 +62,33 @@
         </div>
     </div>
     <div class="col-sm-3 list-column full-height">
-        <div class="page-header">
-            <h1 class="text-center">Statistics</h1>
-        </div>
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h1 class="panel-title overflow-ellipsis">
-                    <span class="glyphicon glyphicon-stats"></span>
-                    Miscellaneous
-                </h1>
+        <h1 class="text-center">
+            <span class="glyphicon pull-left collapse-icon glyphicon-chevron-{{statsCollapsed ? 'right' : 'down'}}" ng-click="statsCollapsed = !statsCollapsed"></span>
+            Statistics
+        </h1>
+        <div collapse="statsCollapsed">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h1 class="panel-title overflow-ellipsis">
+                        <span class="glyphicon glyphicon-stats"></span>
+                        Miscellaneous
+                    </h1>
+                </div>
+                <div class="panel-body">
+                    <dl class="dl-horizontal">
+                        <dt style="width: 100px;">{{ctrl.gameService.games.length}}</dt>
+                        <dd style="margin-left: 120px;" class="overflow-ellipsis">games</dd>
+                        <dt style="width: 100px;">{{ctrl.countFinished()}}</dt>
+                        <dd style="margin-left: 120px;" class="overflow-ellipsis">completed ({{ctrl.countFinishedPct()}}%)</dd>
+                    </dl>
+                </div>
             </div>
-            <div class="panel-body">
-                <dl class="dl-horizontal">
-                    <dt style="width: 100px;">{{ctrl.gameService.games.length}}</dt>
-                    <dd style="margin-left: 120px;" class="overflow-ellipsis">games</dd>
-                    <dt style="width: 100px;">{{ctrl.countFinished()}}</dt>
-                    <dd style="margin-left: 120px;" class="overflow-ellipsis">completed ({{ctrl.countFinishedPct()}}%)</dd>
-                </dl>
-            </div>
+            <stats-panel panel-title="Playtime" key="playtime" value="title" items="ctrl.gameService.games" filter-by="ctrl.hasPlaytime" order-by="['playtimeAsInt()', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
+            <stats-panel panel-title="Rating" key="rating" value="title" items="ctrl.gameService.games" filter-by="{rating: '!!'}" order-by="['rating', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
+            <stats-panel panel-title="Year" key="year" value="title" items="ctrl.gameService.games" filter-by="{year: '!!'}" order-by="['year', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
+            <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.gameService.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
+            <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.gameService.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
+            <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.gameService.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
         </div>
-        <stats-panel panel-title="Playtime" key="playtime" value="title" items="ctrl.gameService.games" filter-by="ctrl.hasPlaytime" order-by="['playtimeAsInt()', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
-        <stats-panel panel-title="Rating" key="rating" value="title" items="ctrl.gameService.games" filter-by="{rating: '!!'}" order-by="['rating', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
-        <stats-panel panel-title="Year" key="year" value="title" items="ctrl.gameService.games" filter-by="{year: '!!'}" order-by="['year', '-sort_as']" descending="true" on-click="ctrl.gameSelected(item)"></stats-panel>
-        <stats-panel panel-title="Genres" key="count" value="name" items="ctrl.gameService.genres" order-by="[ctrl.countGenre, '-name']" descending="true" on-click="ctrl.query = {genre: item.id}"></stats-panel>
-        <stats-panel panel-title="Platforms" key="count" value="name" items="ctrl.gameService.platforms" order-by="[ctrl.countPlatform, '-name']" descending="true" on-click="ctrl.query = {platform: item.id}"></stats-panel>
-        <stats-panel panel-title="Tags" key="count" value="name" items="ctrl.gameService.tags" order-by="[ctrl.countTag, '-name']" descending="true" on-click="ctrl.query = {tag: item.id}"></stats-panel>
     </div>
 </div>
